--- a/unified_targets/configs/CRAZYBEEF4SX1280.config
+++ b/unified_targets/configs/CRAZYBEEF4SX1280.config
@@ -10,4 +10,4 @@ resource RX_SPI_EXPRESSLRS_BUSY 1 A13
 
 set expresslrs_domain = ISM2400
 set expresslrs_rate_index = 0
-set expresslrs_hybrid_switches = ON
+set expresslrs_switch_mode = HYBRID
